--- a/gpl.htm
+++ b/gpl.htm
@@ -4,7 +4,7 @@
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
  <title>GNU General Public License v2.0 - GNU Project - Free Software Foundation (FSF)</title>
  <link rel="alternate" type="application/rdf+xml"
-		 href="http://www.gnu.org/licenses/old-licenses/gpl-2.0.rdf"> 
+		 href="https://www.gnu.org/licenses/old-licenses/gpl-2.0.rdf"> 
 </head>
 <body>
 <h3><a id="SEC1">GNU GENERAL PUBLIC LICENSE</a></h3>
@@ -479,7 +479,7 @@ This General Public License does not permit incorporating your program into
 proprietary programs.  If your program is a subroutine library, you may
 consider it more useful to permit linking proprietary applications with the
 library.  If this is what you want to do, use the 
-<a href="http://www.gnu.org/licenses/lgpl.html">GNU Lesser General Public License</a>
+<a href="https://www.gnu.org/licenses/lgpl.html">GNU Lesser General Public License</a>
 instead of this License.
 </p>
 
