--- a/index.htm
+++ b/index.htm
@@ -59,7 +59,7 @@
 					<br />
 					This site is the home- and demopage of the <a target="_blank" href="https://github.com/naTmeg/ScriptedAmigaEmulator">SAE</a>,
 					an <a target="_blank" href="https://en.wikipedia.org/wiki/Amiga">Amiga</a> emulator in pure HTML5 and JavaScript.<br />
-					It is heavily based on <a target="_blank" href="http://winuae.net">WinUAE</a> and does use the <a target="_blank" href="http://aros.sourceforge.net">AROS</a>-Kickstart replacement.
+					It is heavily based on <a target="_blank" href="https://winuae.net">WinUAE</a> and does use the <a target="_blank" href="https://aros.sourceforge.io">AROS</a>-Kickstart replacement.
 					For more informations,<br />please see the <a target="_blank" href="readme.htm">description.</a><br />
 					<br />
 					Select an item to 'Start' from the database or press 'Config' for an advanced setup...<br />
@@ -622,7 +622,7 @@
 															<td style="width:100%"></td>
 															<td>
 																<input id="cfg_rom_kickshifter" type="checkbox" />Patch for 'ShapeShifter'
-																<a target="_blank" href="http://shapeshifter.cebix.net/">?</a>
+																<a target="_blank" href="https://shapeshifter.cebix.net/">?</a>
 															</td>
 														</tr>
 														<tr>
@@ -1301,7 +1301,7 @@
 												<td class="alm"><input id="cfg_video_brightness" type="text" maxlength="5" onkeypress="return isDecKey(event, true)" /> <span class="info">(-1000 to 1000)</span></td>
 												<td class="arm">Background</td>
 												<td class="alm"><input id="cfg_video_background" type="text" maxlength="6" onkeypress="return isHexKey(event)" />
-													<span class="info">(#rrggbb)</span> <a target="_blank" href="http://www.rapidtables.com/web/color/RGB_Color.htm">?</a>
+													<span class="info">(#rrggbb)</span> <a target="_blank" href="https://www.rapidtables.com/web/color/RGB_Color.htm">?</a>
 												</td>
 											</tr>
 											<tr>
