--- a/readme.htm
+++ b/readme.htm
@@ -393,9 +393,9 @@
 			<ul id="thanks">
 				<li><span class="label">Thanks</span>
 					<ul>
-						<li><a target="_blank" href="http://winuae.net">WinUAE team</a>, especially Toni Wilen.</li>
-						<li><a target="_blank" href="http://web.archive.org/web/20130812173347/http://www.amigaemulator.org/">Bernd Schmidt</a>, the father of amiga-emulation.</li>
-						<li><a target="_blank" href="http://aros.org">AROS team</a></li>
+						<li><a target="_blank" href="https://winuae.net">WinUAE team</a>, especially Toni Wilen.</li>
+						<li><a target="_blank" href="https://web.archive.org/web/20130812173347/http://www.amigaemulator.org/">Bernd Schmidt</a>, the father of amiga-emulation.</li>
+						<li><a target="_blank" href="https://aros.sourceforge.io">AROS team</a></li>
 						<li>All people who contributed their software or helped via github. Thanks for your support!</li>
 					</ul>
 				</li>
@@ -794,7 +794,7 @@
 								<li>Common
 									<ul>
 										<li>Added support for easy URL sharing. E.g. to show the Multica-demo to a friend,<br />
-											one may send the link &quot;http://scriptedamigaemulator.net/#Multica&quot;<br />
+											one may send the link &quot;https://scriptedamigaemulator.net/#Multica&quot;<br />
 											and the demo will start immediately. (thanks mrdoob)</li>
 										<li>Many small optimizations.</li>
 									</ul>
@@ -808,7 +808,7 @@
 									<ul>
 										<li>Chaned the project-name from 'Janus' to 'SAE' (Scripted Amiga Emulator).<br />
 											This step is necessary because i did'nt enough research before the initial release.<br />
-											There is already a project with that name in it. (<a target="_blank" href="http://janus-uae.sourceforge.net">janus-uae</a>)
+											There is already a project with that name in it. (<a target="_blank" href="https://janus-uae.sourceforge.net">janus-uae</a>)
 											I'm sorry for that, that was kinda stupid :)</li>
 										<li>Separated the GUI form the core and rewrote most of it.</li>
 										<li>Simplified the whole code. This means, that functions are called faster.</li>
